clusters/home/apps/home/mqtt/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mqtt-dashboard
  namespace: home-assistant
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: "mqtt-dashboard.layertwo.dev"
    layertwo.dev/publish: "internal"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`mqtt-dashboard.layertwo.dev`)"
      services:
      - name: mqtt-dashboard
        port: 18083
